force-app/main/default/objects/flair__Absence_Approval_Request__c/flair__Absence_Approval_Request__c.object-meta.xml
<CustomObject>
    <label>Absence Approval Request</label>
    <nameField>
        <label>Absence Approval Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Absence Approval Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>