force-app/main/default/objects/flair__Absence_Approval_Request__c/fields/flair__Absence__c.field-meta.xml
<CustomField>
    <fullName>flair__Absence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>new help text on absence</inlineHelpText>
    <label>Absence</label>
    <referenceTo>flair__Absence__c</referenceTo>
    <relationshipLabel>Absence Approval Requests</relationshipLabel>
    <relationshipName>Absence_Approval_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>