force-app/main/default/objects/flair__Absence_Approval_Request__c/fields/flair__Absence_Type__c.field-meta.xml
<CustomField>
    <fullName>flair__Absence_Type__c</fullName>
    <formula>flair__Absence__r.flair__Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Absence Type</label>
    <type>Text</type>
</CustomField>