force-app/main/default/objects/flair__Absence_Approval_Request__c/fields/flair__Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>flair__Approval_Status__c</fullName>
    <label>Approval Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>flair__Approval_Status</valueSetName>
    </valueSet>
</CustomField>