force-app/main/default/objects/flair__Absence_Approval_Request__c/fields/flair__Approver__c.field-meta.xml
<CustomField>
    <fullName>flair__Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver</label>
    <referenceTo>flair__Employee__c</referenceTo>
    <relationshipLabel>Absence Approval Requests</relationshipLabel>
    <relationshipName>Absence_Approval_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>