force-app/main/default/objects/flair__Absence_Approval_Request__c/fields/flair__Approver_Comment__c.field-meta.xml
<CustomField>
    <fullName>flair__Approver_Comment__c</fullName>
    <description>Comment about the review</description>
    <label>Approver Comment</label>
    <type>TextArea</type>
</CustomField>