force-app/main/default/objects/flair__Absence_Approval_Request__c/fields/flair__Approver_Email__c.field-meta.xml
<CustomField>
    <fullName>flair__Approver_Email__c</fullName>
    <formula>flair__Approver__r.flair__Company_Email__c</formula>
    <label>Approver Email</label>
    <type>Text</type>
</CustomField>