force-app/main/default/objects/flair__Absence_Approval_Request__c/fields/flair__Approver_Name__c.field-meta.xml
<CustomField>
    <fullName>flair__Approver_Name__c</fullName>
    <formula>flair__Approver__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approver Name</label>
    <type>Text</type>
</CustomField>