force-app/main/default/objects/flair__Absence_Approval_Request__c/fields/flair__Category_Name__c.field-meta.xml
<CustomField>
    <fullName>flair__Category_Name__c</fullName>
    <formula>flair__Absence__r.flair__Category_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Category Name</label>
    <type>Text</type>
</CustomField>