force-app/main/default/objects/flair__Absence_Approval_Request__c/fields/flair__Employee_Email__c.field-meta.xml
<CustomField>
    <fullName>flair__Employee_Email__c</fullName>
    <formula>flair__Absence__r.flair__Employee_Absence_Category__r.flair__Employee__r.flair__Company_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Email</label>
    <type>Text</type>
</CustomField>