force-app/main/default/objects/flair__Absence_Approval_Request__c/fields/flair__Employee_Location__c.field-meta.xml
<CustomField>
    <fullName>flair__Employee_Location__c</fullName>
    <formula>flair__Absence__r.flair__Employee_Absence_Category__r.flair__Employee__r.flair__Location__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Location</label>
    <type>Text</type>
</CustomField>