force-app/main/default/objects/flair__Absence_Approval_Request__c/fields/flair__Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>flair__Employee_Name__c</fullName>
    <formula>flair__Absence__r.flair__Employee_Absence_Category__r.flair__Employee__r.Name</formula>
    <label>Employee Name</label>
    <type>Text</type>
</CustomField>