force-app/main/default/objects/flair__Absence_Approval_Request__c/fields/flair__End_Date__c.field-meta.xml
<CustomField>
    <fullName>flair__End_Date__c</fullName>
    <formula>flair__Absence__r.flair__End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date</label>
    <type>Date</type>
</CustomField>