force-app/main/default/objects/flair__Absence_Approval_Request__c/fields/flair__Start_Date_Half_Day__c.field-meta.xml
<CustomField>
    <fullName>flair__Start_Date_Half_Day__c</fullName>
    <formula>flair__Absence__r.flair__Start_Date_Half_Day__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Date Half Day</label>
    <type>Checkbox</type>
</CustomField>