force-app/main/default/objects/flair__Absence_Approval_Request__c/fields/flair__Start_Time__c.field-meta.xml
<CustomField>
    <fullName>flair__Start_Time__c</fullName>
    <formula>flair__Absence__r.flair__Start_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Time</label>
    <type>Time</type>
</CustomField>