force-app/main/default/objects/flair__Absence_Approval_Request__c/fields/flair__Working_Amount__c.field-meta.xml
<CustomField>
    <fullName>flair__Working_Amount__c</fullName>
    <formula>flair__Absence__r.flair__Working_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Working Amount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>