force-app/main/default/objects/flair__Absence_Approval_Request__c/listViews/flair__All.listView-meta.xml
<ListView>
    <fullName>flair__All</fullName>
    <columns>NAME</columns>
    <columns>flair__Approver__c</columns>
    <columns>flair__Approval_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>